# Cloud-AutoScale

./: .dockerignore  .gitignore  BRD.txt  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  Tasks.txt  Technologies.txt  create_configs.py  demo.py  docker-compose.yml  example_usage.py  pyproject.toml  todo
cloud_autoscale/: __init__.py  forecasting.py
cloud_autoscale/cli/: __init__.py  main.py
cloud_autoscale/config/: __init__.py  baseline.yaml  config.py  gcp2019.yaml  gcp2019_proactive.yaml  gcp2019_rl.yaml
cloud_autoscale/data/: __init__.py
cloud_autoscale/data/loaders/: __init__.py  gcp2019_loader.py  synthetic_loader.py
cloud_autoscale/rl/: agent.py  autoscaler_rl.py  env.py  train.py
cloud_autoscale/simulation/: __init__.py  autoscaler_baseline.py  autoscaler_proactive.py  metrics.py  simulator.py
cloud_autoscale/visualization/: __init__.py  plots.py
cloud_scheduler/: __init__.py  cli.py
cloud_scheduler/core/: __init__.py  events.py  resources.py  simulator.py  workload.py
cloud_scheduler/data/: __init__.py  generators.py  loaders.py  preprocessors.py
cloud_scheduler/evaluation/: __init__.py  metrics.py
cloud_scheduler/ml/: __init__.py  forecasting.py
cloud_scheduler/scheduling/: __init__.py  autoscaling.py  baseline.py
cloud_scheduler/utils/: __init__.py  config.py  data_loader.py  visualization.py
configs/: baseline.yaml  ml_scheduling.yaml  rl_scheduling.yaml
data/retrievers/: TIMESTAMP_EXPLANATION.md  get_gcp_data.py  process_gcp_data.py
docs/: GOOGLE_TRACES.md  Google cluster traces.docx  MANUAL_SETUP.md  ~$ogle cluster traces.docx
examples/: google_trace_workflow.py
notebooks/: EDA v0.01.ipynb  EDA.ipynb  modeling_pipeline.ipynb
scripts/: EDA.ipynb  download_google_traces.py  integrate_google_traces.py  setup_google_traces.sh  test_setup.py
