[project]
name = "cloud-autoscale"
version = "1.0.0"
description = "Cloud Autoscaling Simulator - Master's Project"
authors = [
    {name = "Medhata Bouzeid", email = "medhata@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}

dependencies = [
    # Core dependencies
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "matplotlib>=3.9.0",
    "tqdm>=4.67.1",
    "orjson>=3.11.4",
    "polars>=1.35.2",
    "ipykernel>=7.1.0",
    "seaborn>=0.13.2",
    "pyarrow>=22.0.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.6",
    "statsmodels>=0.14.5",
    "scikit-learn>=1.7.2",
    "lightgbm>=4.6.0",
    "optuna>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.scripts]
cloud-autoscale = "cloud_autoscale.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cloud_autoscale"]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
